--- a/m3/index.html
+++ b/m3/index.html
@@ -45,8 +45,14 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <section class="section-content" id="chicken-section">
           <h3 class="text-center">Chicken</h3>
+<p>Please provide the GitHub.io URL, pointing to the folder that contains the solution for this assignment. For example, http://yourGiHubId.github.io/repository-name/module3-solution.
 
-          
+Please note: you need to provide a URL where your web site can be seen, NOT the GitHub repository URL where your code history can be seen. (Make sure the domain name of the URL you provide ends with .io instead of .com)
+
+Please test that the URL you provide actually displays your solution web page before you submit the assignment.
+
+** Submitting the wrong URL will result in a FAILING GRADE for your assignment, even if everything is done correctly. **
+          </p>          
           <div class="nav-back">
             <a href="#page-top" class="back-to-top">Back to Top</a>
           </div>
@@ -56,7 +62,14 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <section class="section-content" id="beef-section">
           <h3 class="text-center">Beef</h3>
+<p>Please provide the GitHub.io URL, pointing to the folder that contains the solution for this assignment. For example, http://yourGiHubId.github.io/repository-name/module3-solution.
 
+Please note: you need to provide a URL where your web site can be seen, NOT the GitHub repository URL where your code history can be seen. (Make sure the domain name of the URL you provide ends with .io instead of .com)
+
+Please test that the URL you provide actually displays your solution web page before you submit the assignment.
+
+** Submitting the wrong URL will result in a FAILING GRADE for your assignment, even if everything is done correctly. **
+          </p>  
                <div class="nav-back">
             <a href="#page-top" class="back-to-top">Back to Top</a>
           </div>
@@ -66,7 +79,14 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <section class="section-content" id="sushi-section">
           <h3 class="text-center">Sushi</h3>
+<p>Please provide the GitHub.io URL, pointing to the folder that contains the solution for this assignment. For example, http://yourGiHubId.github.io/repository-name/module3-solution.
 
+Please note: you need to provide a URL where your web site can be seen, NOT the GitHub repository URL where your code history can be seen. (Make sure the domain name of the URL you provide ends with .io instead of .com)
+
+Please test that the URL you provide actually displays your solution web page before you submit the assignment.
+
+** Submitting the wrong URL will result in a FAILING GRADE for your assignment, even if everything is done correctly. **
+          </p>  
           <div class="nav-back">
             <a href="#page-top" class="back-to-top">Back to Top</a>
           </div>
