--- a/m4/index.html
+++ b/m4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution</title>
+  <title>Module 4 Solution Starter</title>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
@@ -11,7 +11,7 @@
   <script src="script/script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution</h1>
-  <h3>Inspect the page and checkout the Console in the Developer Tools.</h3>
+  <h1>Module 4 Solution Starter</h1>
+ 
 </body>
 </html>
